# libtddmac

./: AUTHORS  Makefile.am  README  configure.ac  tddmac.pc.in
include/: Makefile.am
include/tddmac/: Makefile.am  tddmac.h
src/: Makefile.am
src/libtddmac/: Android.mk  Makefile.am  tddmac.c  tddmac_regs.h
